openshift/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewvirt-api
  labels:
    app: viewvirt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewvirt-api
  template:
    metadata:
      labels:
        app: viewvirt-api
    spec:
      serviceAccountName: viewvirt
      securityContext:
        runAsNonRoot: true
      containers:
      - name: viewvirt-api
        image: quay.io/jkeam/viewvirt-api
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 2
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: viewvirt-api
  name: viewvirt-api
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: viewvirt-api
  type: ClusterIP
