openshift/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewvirt-web
  labels:
    app: viewvirt-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewvirt-web
  template:
    metadata:
      labels:
        app: viewvirt-web
    spec:
      serviceAccountName: viewvirt
      securityContext:
        runAsNonRoot: true
      containers:
      - name: oauth-proxy
        image: quay.io/openshift/origin-oauth-proxy:4.15
        ports:
        - containerPort: 8443
          name: public
        args:
        - --https-address=:8443
        - --provider=openshift
        - --openshift-service-account=viewvirt
        - --upstream=http://localhost:3000
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --cookie-secret-file=/etc/proxy/secrets/session_secret
        - --openshift-sar={"group":"viewvirt.keam.io","resource":"appaccess","resourceName":"viewvirt","verb":"use"}
        - --cookie-expire=5m
        - --cookie-refresh=2m
        volumeMounts:
        - mountPath: /etc/tls/private
          name: proxy-tls
        - mountPath: /etc/proxy/secrets
          name: proxy-secret
      - name: viewvirt-web
        image: quay.io/jkeam/viewvirt-web
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 2
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      volumes:
      - name: proxy-tls
        secret:
          secretName: proxy-tls
      - name: proxy-secret
        secret:
          secretName: proxy-secret

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: viewvirt-web
  name: viewvirt-web
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  ports:
  - name: proxy
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: viewvirt-web
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: viewvirt-web
spec:
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
  to:
    name: viewvirt-web
